fix popup overlap

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -38,7 +38,7 @@ body {
 :root {
   --color-som: #FF6B18; /* Default color */
   --color-somon: #FDEAE3;
-  --color-sombar: #FAA88A;
+  --color-sombar: #FDBA74;
 }
 
 .bg-som {
